--- a/TMS/TMS/Views/Profile/Edit.cshtml
+++ b/TMS/TMS/Views/Profile/Edit.cshtml
@@ -33,7 +33,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box box-body">
+            <div class="box-body">
                 <div class="form-horizontal inputform">
                     <div class="col-md-3 profileAvatar">
                         <div class="avatar">
