Thy: Fix hien thi

--- a/TMS/TMS/Views/Home/Index.cshtml
+++ b/TMS/TMS/Views/Home/Index.cshtml
@@ -182,7 +182,7 @@
                                         <a href="/Ticket/Detail/@ticket.ID" class="text-bold text-blue">@ticket.Subject</a>
                                     </p>
                                     <p>
-                                        <i class="fa fa-check-square text-green"></i>&nbsp;&nbsp;Ticket solved in
+                                        <i class="fa fa-check-square text-green"></i>&nbsp;&nbsp;
                                         <span class="text-green text-bold">@ticket.SolvedTime</span>
                                         &nbsp;by <span class="text-green text-bold">@ticket.SolvedBy</span>
                                     </p>
